processed/jira/txt/LU/LU-17193.txt
Key:        LU-17193
Summary:    RHEL 9.2 building with gcc12 hits a few issues
Link:       https://jira.whamcloud.com/browse/LU-17193
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Fri, 13 Oct 2023 13:50:24 +0000
Updated:    Fri, 27 Oct 2023 21:45:15 +0000
Resolved:   Wed, 25 Oct 2023 19:56:06 +0000

--- Description ---
gcc12 breaks a couple of compile tests:

/home/shaun/lustre-release/_lpb/fileattr_set_pc/fileattr_set_pc.c: In function ‘main’:
/home/shaun/lustre-release/_lpb/fileattr_set_pc/fileattr_set_pc.c:74:32: error: array subscript 0 is outside array bounds of ‘struct inode_operations[0]’ [-Werror=array-bounds]
   74 |  ((struct inode_operations *)1)->fileattr_get(NULL, NULL);
      |                                ^~

A couple of compile tests have an invalid '3rd' argument (cleanup).

A few QCTL_COPY() macros hit:

In function ‘strnlen’,
    inlined from ‘mdc_iocontrol’ at /home/shaun/lustre-release/lustre/mdc/mdc_request.c:2286:4:
include/linux/fortify-string.h:23:34: error: array subscript 112 is outside array bounds of ‘void[112]’ [-Werror=array-bounds]
   23 |             __builtin_constant_p(*__p)) {                       \
      |                                  ^~~~
include/linux/fortify-string.h:141:24: note: in expansion of macro ‘__compiletime_strlen’
  141 |         size_t p_len = __compiletime_strlen(p);
      |                        ^~~~~~~~~~~~~~~~~~~~
In file included from include/linux/fs.h:44,
                 from include/linux/huge_mm.h:8,
                 from include/linux/mm.h:707,
                 from include/linux/pagemap.h:8,
                 from /home/shaun/lustre-release/lustre/mdc/mdc_request.c:37:
In function ‘kmalloc’,
    inlined from ‘mdc_iocontrol’ at /home/shaun/lustre-release/lustre/mdc/mdc_request.c:2279:3:
include/linux/slab.h:611:24: note: at offset 112 into object of size 112 allocated by ‘kmem_cache_alloc_trace’
  611 |                 return kmem_cache_alloc_trace(
      |                        ^~~~~~~~~~~~~~~~~~~~~~~
  612 |                                 kmalloc_caches[kmalloc_type(flags)][index],
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  613 |                                 flags, size);
      |                                 ~~~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (pjones, Wed, 25 Oct 2023 19:56:06 +0000) ---
Landed for 2.16

--- Comment (gerrit, Wed, 25 Oct 2023 18:06:15 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/52687/

Subject: LU-17193 build: fix gcc-12 compiler warnings

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 1b0de05f81372eeda9a2a38142553ead7e88a431

--- Comment (gerrit, Fri, 13 Oct 2023 13:59:56 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52687

Subject: LU-17193 build: fix gcc-12 compiler warnings

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 5dcfa0102db60cec25769b39d34649f2d516045e
